###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Unreleased:

    - Chris Pickel's GSoC2007 work: registry2.0 & cregistry (mainly r27518 & r27520)

    - Eugene Pimenov's GSoC2007 work: Trace lib on unix sockets (r26682).

    - Elias Pipping's GSoC2007 work: merge.rb on his personal /users/pipping svn dir.


Release 1.5.2 (15-August-2007 at branches/release_1_5's r27896, by jmpp):

    - Fix mtree checks which inaccurately complained about files in /Applications, /Library & /Developer;
      mtree checks now also warn the user if a port indicates an intended violation and errors are
      temporarily non-fatal (mww & eridius in r27709, r27710, r27719, r27720 & r27773).


Release 1.5.1 (11-August-2007 at branches/release_1_5/base's r27646, by jmpp):

    - Remove sed rules taking care of dp based comments in the macports.conf file from the upgrade target in base/Makefile.in,
      they were causing problems for people with /opt/dports or similar prefixes (jmpp in r27618).

    - Facelift to the PortIndex2MySQL.tcl script to make it selfcontained and work with the new macports1.0 api to
      generate SQL statements with information extracted from Portfiles (jmpp in r27415).

    - Always print the livecheck regex in debug mode, not only when it fails (ryandesign in r27379).

    - Detect some mtree violations within ${prefix}. Test can be overriden by "destroot.violate_mtree yes" in a Portfile
      (mww in r27199).

    - Fix version comparison in MacPorts initialization to properly detect Tcl versions 8.4.7 and later (sfiera in r27127).

    - Fix double de-escaping of livecheck.regex inadvertently introduced in r26041 (eridius in r27079).

    - Added new Portfile options to the configure stage for selecting compiler(s) (mww in r27018, r27021, r27022 and r27053)

    - New logic in the upgrade target to account for cases where the old and new versions consist of different
      numbers of segments (sfiera in r26921).
