@@ -6,6 +6,8 @@
 
 Unreleased:
 
+    - Fix upgrade to properly handle installed versions beginning with letters (eridius in r27900).
+
     - Chris Pickel's GSoC2007 work: registry2.0 & cregistry (mainly r27518 & r27520)
 
     - Eugene Pimenov's GSoC2007 work: Trace lib on unix sockets (r26682).
